hedgedoc/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc
spec:
  selector:
    matchLabels:
      app: hedgedoc
  template:
    metadata:
      labels:
        app: hedgedoc
    spec:
      containers:
        - name: hedgedoc
          image: lscr.io/linuxserver/hedgedoc:1.10.2
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /_health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /_health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 10
