hedgedoc/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc
spec:
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: hedgedoc
