hedgedoc/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hedgedoc
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`md.simulatan.me`)
      services:
        - name: hedgedoc
          port: 3000
